resolved each component overflow problem

--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -11,6 +11,9 @@
     }
     .left{
         flex: 0.5;
+        @include mobile{
+            overflow: hidden;
+        }
         .imageContainer{
             height: 500px;
             width: 500px;
